# attendance_dashboard

./: README.md  app.py  h origin main  pyproject.toml  requirements.lock.txt  requirements.txt  test_gemini_models.py
docs/architecture/: ARC-002 Application Architecture.md  ARC-003 Domain Architecture.md  ARC-005 Reporting Architecture.md  ARC-006 Presentation Architecture.md  ARC-007 Infrastructure Architecture.md  ARC-008 Data Architecture.md  ARC-009 Security Architecture.md  ARC-010 Integration Architecture.md  ARC-011 Deployment Architecture.md  ARC-012 Testing Architecture.md
docs/checkpoints/: CP-010B.md
src/application/builders/: session_builder.py
src/application/dto/: activity_result.py
src/application/services/: activity_service.py  ai_service.py  attendance_service.py  dashboard_service.py  import_service.py  report_service.py
src/config/: ai_config.py
src/domain/ai/: exceptions.py  interfaces.py  models.py  prompts.py
src/domain/analytics/: __init__.py  activity.py  attendance.py  comparisons.py  done.py  insight.py  leaderboards.py  scripture.py  sessions.py  statistics.py
src/domain/constants/: keywords.py
src/domain/enums/: __init__.py  activity_type.py  attendance_type.py  base_enum.py  export_format.py  member_status.py  message_type.py  report_type.py  session_status.py
src/domain/models/: __init__.py  activity_event.py  attendance_event.py  attendance_summary.py  dashboard_metrics.py  done_event.py  insight_event.py  member.py  message.py  report.py  scripture_event.py  session.py
src/domain/policies/: __init__.py  activity_policy.py  attendance_policy.py
src/infrastructure/ai/: provider_factory.py
src/infrastructure/ai/clients/: __init__.py  gemini_client.py  ollama_client.py  openai_client.py
src/infrastructure/ai/providers/: __init__.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/infrastructure/config/: constants.py  keywords.py  logging_config.py  regex.py  settings.py
src/infrastructure/data_engine/: cleaner.py  exceptions.py  loader.py  models.py  parser.py  patterns.py  validator.py  whatsapp_parser.py
src/presentation/: __init__.py  context.py  navigation.py  streamlit_app.py  theme.py
src/presentation/components/: __init__.py  charts.py  tables.py
src/presentation/components/ai/: __init__.py  ai_panel.py  ministry_ai_panel.py
src/presentation/components/attendance/: __init__.py  distribution.py  overview.py
src/presentation/components/common/: __init__.py  filters.py  metric_cards.py  sidebar.py
src/presentation/pages/: activity_page.py  attendance_page.py  dashboard_page.py  home_page.py  ministry_ai_page.py  reports_page.py  settings_page.py
src/presentation/utils/: formatters.py
src/presentation/viewmodels/: activity_viewmodel.py  attendance_viewmodel.py  dashboard_viewmodel.py  report_viewmodel.py
tests/domain/analytics/: test_activity.py  test_attendance.py  test_comparisons.py  test_done.py  test_insight.py  test_leaderboards.py  test_scripture.py  test_sessions.py  test_statistics.py
tests/domain/models/: test_activity_event.py  test_attendance_event.py  test_done_event.py  test_message.py  test_scripture_event.py
