# pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance_dashboard"
version = "0.1.0"
description = "Offline WhatsApp Attendance & Activity Analytics Dashboard"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Your Name" }
]

dependencies = [
    # ==========================
    # Core Data Processing
    # ==========================
    "pandas>=2.2.0",

    # ==========================
    # Dashboard
    # ==========================
    "streamlit>=1.46.0",
    "plotly>=6.0.0",

    # ==========================
    # AI Providers
    # ==========================
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.32.0",

    # ==========================
    # Configuration
    # ==========================
    "python-dotenv>=1.1.0",

    # ==========================
    # Excel Reports
    # ==========================
    "openpyxl>=3.1.5",

    # ==========================
    # PDF Reports
    # ==========================
    "reportlab>=4.4.0",

    # ==========================
    # Testing
    # ==========================
    "pytest>=8.4.0",

    # ==========================
    # Packaging
    # ==========================
    "pyinstaller>=6.15.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = [
    "test_*.py"
]

pythonpath = [
    "."
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W"
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true